# prometheus-os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  mkdocs.yml
ai-core/: Cargo.toml
ai-core/src/: automation.rs  context.rs  engine.rs  main.rs  memory.rs  plugin.rs  reasoning.rs  vision.rs  voice.rs
applications/browser/: Cargo.toml
applications/browser/src/: main.rs
applications/dashboard/: Cargo.toml
applications/dashboard/src/: main.rs  monitor.rs  render.rs  widgets.rs
applications/developer-hub/: Cargo.toml
applications/developer-hub/src/: main.rs
applications/files/: Cargo.toml
applications/files/src/: main.rs
applications/package-manager/: Cargo.toml
applications/package-manager/src/: lib.rs  main.rs
applications/plugin-manager/: Cargo.toml
applications/plugin-manager/src/: main.rs
applications/settings/: Cargo.toml
applications/settings/src/: lib.rs  main.rs
applications/snapshot-manager/: Cargo.toml
applications/snapshot-manager/src/: lib.rs  main.rs
applications/system-monitor/: Cargo.toml
applications/system-monitor/src/: main.rs  monitor.rs
applications/task-manager/: Cargo.toml
applications/task-manager/src/: main.rs
applications/terminal/: Cargo.toml
applications/terminal/src/: main.rs
boot/initramfs/: prometheus-rollback-hook  prometheus_initcpio_hook  prometheus_initcpio_install
boot/systemd/: prometheus-ai.service  prometheus-compositor.service  prometheus-session.target
compositor/: Cargo.toml
compositor/src/: compositor.rs  config.rs  effects.rs  input.rs  layout.rs  main.rs  render.rs  shell.rs  workspace.rs
configs/: ai.conf  compositor.conf  prometheus.conf
desktop/: Cargo.toml
desktop/gnome/config/: 00-prometheus-defaults.gschema.override
desktop/gnome/extensions/: install-extensions.sh
desktop/gnome/extensions/prometheus-ai/: extension.js  metadata.json
desktop/gnome/extensions/prometheus-ai/schemas/: org.gnome.shell.extensions.prometheus-ai.gschema.xml
desktop/gnome/extensions/prometheus-dashboard/: extension.js  metadata.json
desktop/gnome/extensions/prometheus-layout/: extension.js  metadata.json
desktop/gnome/gdm/: 00-prometheus-gdm.conf  prometheus-gdm-theme.css
desktop/gnome/mutter/: 90-prometheus-performance.conf  92-prometheus-scheduling.conf
desktop/gnome/session/: prometheus-gnome-session.sh  prometheus-gnome.desktop  prometheus-gnome.session
desktop/gnome/shell-theme/: gnome-shell.css  gnome-shell.css.map  gnome-shell.scss  gtk.css  index.theme
desktop/src/: launcher.rs  main.rs  notification.rs  panel.rs
docs/: .pages  AI_CORE.md  ARCHITECTURE.md  DESKTOP.md  INDEX.md  PERFORMANCE.md  ROBOTICS.md  SECURITY.md  apps.md  changelog.md  desktop.md  index.md  quickstart.md
docs/about/: .pages  credits.md  features.md  index.md  license.md  release-notes.md  roadmap.md  vision.md
docs/ai-core/: .pages  automation.md  config.md  graph.md  index.md  memory.md  models.md  planner.md  plugins.md  reasoning.md  vision.md  voice.md
docs/api/: plugin-api.md  rest.md
docs/architecture/: .pages  ai-integration.md  boot.md  compositor.md  dashboard.md  desktop.md  index.md  kernel.md  performance.md  security-architecture.md  system-design.md
docs/assets/css/: extra.css
docs/community/: .pages  code-of-conduct.md  contributors.md  governance.md  index.md  sponsors.md
docs/developer/: .pages  build.md  cicd.md  contribute.md  debugging.md  index.md  package-manager.md  release.md  standards.md  structure.md  testing.md
docs/performance/: .pages  benchmarks.md  index.md  optimization.md  requirements.md
docs/plugins/: .pages  api.md  architecture.md  development.md  index.md  manifest.md  marketplace.md  permissions.md  templates.md
docs/reference/: .pages  cli.md  configuration.md  env.md  filesystem.md  glossary.md  shortcuts.md
docs/robotics/: .pages  arduino.md  canbus.md  gpio.md  index.md  ros2.md  serial.md
docs/sdk/: .pages  cpp.md  index.md  javascript.md  python.md  rust.md
docs/security/: .pages  audit.md  encryption.md  index.md  permissions.md  privacy.md  sandbox.md  secure-boot.md
docs/tutorials/: .pages  automation.md  build-app.md  create-plugin.md  custom-models.md  esp32.md  index.md  python-sdk.md  robotics-setup.md
docs/user-guide/: .pages  backup.md  desktop-basics.md  index.md  installation.md  managing-apps.md  settings.md  troubleshooting.md  using-ai.md
packaging/iso/: build-iso.sh
packaging/pkgbuilds/prometheus-gnome/: PKGBUILD  prometheus-gnome.install
packaging/pkgbuilds/prometheus-meta/: PKGBUILD  prometheus.install
resources/desktop/: prometheus.desktop
resources/icons/prometheus-icons/: index.theme
resources/plymouth/: prometheus.plymouth  prometheus.script
robotics/ros2/: mod.rs
robotics/serial/: mod.rs
scripts/: prometheus-bootstrap.sh  prometheus-setup-gnome.sh
sdk/cpp/include/: prometheus.hpp
sdk/javascript/: prometheus.js
sdk/python/: __init__.py  setup.py
sdk/python/prometheus_sdk/: __init__.py  ai.py  desktop.py  system.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: ai.rs  app.rs  desktop.rs  lib.rs  system.rs
security/: Cargo.toml
security/src/: audit.rs  encryption.rs  lib.rs  permissions.rs  sandbox.rs
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/about/credits/: index.html
site/about/features/: index.html
site/about/license/: index.html
site/about/release-notes/: index.html
site/about/roadmap/: index.html
site/about/vision/: index.html
site/ai-core/: index.html
site/ai-core/automation/: index.html
site/apps/: index.html
site/architecture/: index.html
site/blog/: index.html
site/changelog/: index.html
site/community/: index.html
site/desktop/: index.html
site/developer/: index.html
site/performance/: index.html
site/plugins/: index.html
site/quickstart/: index.html
site/robotics/: index.html
site/sdk/: index.html
site/search/: search_index.json
site/security/: index.html
site/tutorials/: index.html
site/user-guide/: index.html
(+80 files in other folders)
