[package]
name = "prometheus-ai"
version = "0.1.0"
edition = "2021"
description = "Prometheus AI Core - The operating system's intelligence layer"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rayon.workspace = true
futures.workspace = true
async-trait.workspace = true
