[package]
name = "prometheus-compositor"
version = "0.1.0"
edition = "2021"
description = "Prometheus OS Wayland compositor"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rayon.workspace = true
image.workspace = true
libc.workspace = true
toml = "0.8"
