[package]
name = "prometheus-desktop"
version = "0.1.0"
edition = "2021"
description = "Prometheus OS desktop shell - AI-first desktop environment"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
