[package]
name = "prometheus-security"
version = "0.1.0"
edition = "2024"
description = "Prometheus OS security subsystem"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
chrono.workspace = true

[lib]
name = "prometheus_security"
